# django-template-oxide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  mkdocs.yml  pyproject.toml
benches/: README.md  bench.py  perf_drill.py
docs/: compatibility.md  extending.md  index.md  install.md  limitations.md  performance.md  usage.md
python/django_template_oxide/: __init__.py  _patch.py  apps.py  backend.py
python/django_template_oxide/_rust.cpython-314-darwin.so.dSYM/Contents/: Info.plist
python/django_template_oxide/_rust.cpython-314-darwin.so.dSYM/Contents/Resources/Relocations/aarch64/: libdjango_template_oxide.dylib.yml
python/django_template_oxide/backends/: django.py
scripts/: build-pgo.sh  check.sh  fuzz_differential.py  sync_django_tests.py
src/: body_program.rs  context.rs  django_drop_in.rs  django_integration.rs  errors.rs  lexer.rs  lib.rs  nodes.rs  parser.rs  prof.rs  py_bindings.rs  python_cache.rs  smartif.rs  template.rs  utils.rs  variable.rs
src/filters/: date_format.rs  mod.rs
src/tags/: cache_tag.rs  for_tag.rs  i18n_tags.rs  loader_tags.rs  mod.rs  url_tag.rs
tests/: conftest.py  run_django_tests.py  run_with_oxide.py  settings.py  test_basic_rendering.py  test_compliance.py  test_oxide_backend.py  test_parity.py  test_regressions.py
tests/django_template_tests/filter_tests/: test_date.py  test_filesizeformat.py  test_time.py
tests/django_template_tests/syntax_tests/: test_url.py
tests/django_template_tests/templates/: oxide_base.html  oxide_base_with_inner_render.html  oxide_child.html  oxide_child_with_super.html  oxide_fragment.html  oxide_grandchild.html  oxide_middle.html  oxide_no_blocks.html  oxide_partial_advanced.html  oxide_partial_host.html
tests/django_template_tests/templatetags/: custom.py  raw_tags.py
tests/i18n/: test_compilation.py  test_extraction.py
tests/i18n/other/locale/de/LC_MESSAGES/: django.mo
